Replacing the Apache Base64 conversion with a JDK code.